--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>hi world!!!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viepart" content="width=device-width, initial-scale=1.0">
+    <title>Test page!!</title>
+</head>    
+
+<body>
+    <h1>hi world!!!</h1>
+    <h1>hi world!!!</h1>
+    <h1>hi world!!!</h1>
+    <h1>hi world!!!</h1>
+    <h1>hi world!!!</h1>
+    <h1>hi world!!!</h1>    
+</body>
+</html>
+
