--- a/study1.html
+++ b/study1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>가위 바위 보 게임</title>
+    <title>가위 바위 보 게임!!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .choice-button {
